# CoureProject_SystemProgramming

./: .gitignore  README.md  start
Client/: CMakeLists.txt  Client.cpp  TestLib.cpp
GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WindowBanUser.cpp  WindowBanUser.h  WindowDelete.cpp  WindowDelete.h  WindowGetRight.cpp  WindowGetRight.h  WindowGrant.cpp  WindowGrant.h  WindowListStorage.cpp  WindowListStorage.h  WindowLogin.cpp  WindowLogin.h  WindowPasswdFile.cpp  WindowPasswdFile.h  WindowRead.cpp  WindowRead.h  WindowRevoke.cpp  WindowRevoke.h  check.hpp
Include/: common.cpp  common.h  type_function.cpp  type_packet.h
IncludeMake/: CMakeLists.txt
IncludeMake/include/: common.h  functions_of_types.h  type_packet.h
IncludeMake/src/: common.cpp  functions_of_types.cpp
ListeningDaemon/: CMakeLists.txt  ListeningDaemon.cpp  config.cfg
Server/: CMakeLists.txt  Server.cpp
ServerSide/IncludeMake/: CMakeLists.txt
ServerSide/IncludeMake/include/: check.hpp  sec_library.h  type_packet.h
ServerSide/IncludeMake/src/: common.cpp  common.h  functions_of_types.h  sec_library.cpp
ServerSide/ListeningDaemon/: CMakeLists.txt  listening_daemon.service
ServerSide/ListeningDaemon/include/: check.hpp  common.h  type_packet.h
ServerSide/ListeningDaemon/src/: ListeningDaemon.cpp  common.cpp  functions_of_types.cpp
